--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,6 @@
 packages:
-  - 'packages/**'
-  - 'apps/**'
+  - 'packages/*'
+  - 'apps/*'
   # Ignore test files
   - '!**/test/**'
   - '!**/*/*.test.*'
