--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "pnpm-license-exporter",
   "private": true,
   "scripts": {
+    "build": "turbo run build",
     "test": "turbo run test",
     "eslint": "turbo run eslint",
-    "prettier": "turbo run prettier"
+    "prettier": "turbo run prettier",
+    "license": "node ./scripts/license.js",
+    "prepare": "pnpm run build",
+    "postinstall": "pnpm run license"
+  },
+  "dependencies": {
+    "@luco-inc/pnpm-license-exporter": "workspace:*"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "5.59.6",
     "@vitest/coverage-c8": "0.31.0",
-    "esbuild": "0.17.19",
     "eslint": "8.40.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
