--- a/packages/pnpm-license-exporter/package.json
+++ b/packages/pnpm-license-exporter/package.json
@@ -26,5 +26,14 @@
   },
   "devDependencies": {
     "@types/node": "20.1.5"
+  },
+  "repository": "https://github.com/luco-inc/pnpm-license-exporter",
+  "bugs": {
+    "url": "https://github.com/luco-inc/pnpm-license-exporter/issues"
+  },
+  "homepage": "https://github.com/luco-inc/pnpm-license-exporter#readme",
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com/"
   }
 }
