--- a/package.json
+++ b/package.json
@@ -1,38 +1,60 @@
 {
-  "name": "pnpm-license-exporter",
+  "name": "@luco-inc/pnpm-license-exporter",
+  "version": "1.0.1",
+  "description": "",
+  "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "turbo run build",
-    "test": "turbo run test",
-    "eslint": "turbo run eslint",
-    "prettier": "turbo run prettier",
+    "dev": "tsup --watch --onSuccess \"node ./dist/bin/pnpm-license-exporter.cjs\"",
+    "build": "tsup",
+    "prettier": "prettier --write --check src",
+    "eslint": "eslint -c .eslintrc.cjs --max-warnings=0 --fix --ext .ts src",
+    "test": "vitest run --config vitest.config.js src",
     "license": "node ./scripts/license.js",
     "changeset": "changeset",
     "changeset:init": "changeset init",
     "changeset:version": "changeset version",
-    "changeset:publish": "changeset publish",
-    "prepare": "pnpm run build && pnpm run license"
+    "changeset:publish": "changeset publish"
   },
-  "dependencies": {
-    "@luco-inc/pnpm-license-exporter": "workspace:*"
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "bin": {
+    "pnpm-license-exporter": "./dist/bin/pnpm-license-exporter.cjs"
   },
   "devDependencies": {
-    "@changesets/cli": "2.26.1",
-    "@typescript-eslint/parser": "5.59.6",
-    "@vitest/coverage-c8": "0.31.0",
-    "eslint": "8.40.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-unicorn": "47.0.0",
-    "eslint-plugin-vitest": "0.2.2",
-    "eslint-plugin-vitest-globals": "1.3.1",
-    "prettier": "2.8.8",
-    "turbo": "1.9.6",
-    "typescript": "5.0.4",
-    "vite": "4.3.7",
-    "vitest": "0.31.0"
+    "@changesets/cli": "2.27.1",
+    "@types/node": "20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "@vitest/coverage-v8": "^1.5.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-vitest": "0.5.1",
+    "prettier": "3.2.5",
+    "tsup": "^8.0.2",
+    "typescript": "5.4.5",
+    "vitest": "1.5.0"
   },
-  "packageManager": "pnpm@8.5.1"
+  "repository": "https://github.com/luco-inc/pnpm-license-exporter",
+  "bugs": {
+    "url": "https://github.com/luco-inc/pnpm-license-exporter/issues"
+  },
+  "homepage": "https://github.com/luco-inc/pnpm-license-exporter#readme",
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
 }
