--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true,
     "inlineSources": false,
     "preserveWatchOutput": true,
     "emitDeclarationOnly": true,
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals"],
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["dist", "build", "node_modules"]
 }
