replace changeset to np

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@luco-inc/pnpm-license-exporter",
-  "version": "2.0.0",
+  "version": "1.0.1",
   "description": "",
   "license": "MIT",
   "private": true,
@@ -12,6 +12,7 @@
     "eslint": "eslint -c .eslintrc.cjs --max-warnings=0 --fix --ext .ts src",
     "test": "vitest run --config vitest.config.js src",
     "license": "node ./scripts/license.js",
+    "release": "np",
     "changeset": "changeset",
     "changeset:init": "changeset init",
     "changeset:version": "changeset version",
@@ -36,14 +37,15 @@
   "devDependencies": {
     "@changesets/cli": "2.27.1",
     "@types/node": "20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
-    "@vitest/coverage-v8": "^1.5.0",
+    "@vitest/coverage-v8": "1.5.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-vitest": "0.5.1",
+    "np": "10.0.3",
     "prettier": "3.2.5",
-    "tsup": "^8.0.2",
+    "tsup": "8.0.2",
     "typescript": "5.4.5",
     "vitest": "1.5.0"
   },
