--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@luco-inc/pnpm-license-exporter",
-  "version": "2.0.0",
+  "version": "3.0.0-0",
   "description": "",
   "license": "MIT",
   "type": "module",
