--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@luco-inc/pnpm-license-exporter",
   "version": "3.0.0",
-  "description": "",
+  "description": "Dependencies license exporter for projects using pnpm.",
   "license": "MIT",
   "type": "module",
   "scripts": {
